# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  spec.yaml  zero2prod
.cargo/: config.toml
.github/workflows/: quality.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
