[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Thomas Chaigneau <t.chaigneau.tc@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.13.3"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
]

[dev-dependencies]
reqwest = "0.11"
